Fix alignment of class selector dropdowns and search boxes in data table filtering
Having the right-aligned-search CSS rule as is causes issues with both filter text boxes and dropdowns rendering all the way to the right of the column in cases where the column width is much bigger than the header text. Changing this rule to be dependent on header.rightAlign vs. just whether it's the last column in the table fixes the alignment issues.

PiperOrigin-RevId: 529491925

--- a/lit_nlp/client/elements/table.css
+++ b/lit_nlp/client/elements/table.css
@@ -39,6 +39,7 @@
   font-weight: 500;
   color: #04394b;
   border-bottom: solid 1px #dadce0;
+  position: relative;
 }
 
 .column-header {
@@ -291,5 +292,5 @@ tbody td {
 }
 
 .right-aligned-search {
-  right: 0;
+  right: 20px;
 }
